changed node version to 16 in json

--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1"
+  },
+  "engines": {
+    "node": "16.x"
   },
   "scripts": {
     "build": "react-scripts build",
